--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,40 @@
 :root {
   --bs-body-bg: var(--bs-gray-100);
 }
+
+body {
+  font-family: 'Inter', system-ui, sans-serif;
+  background-color: var(--bs-body-bg);
+  color: var(--bs-gray-900);
+}
+
+header.bg-light {
+  background-image: linear-gradient(90deg, #eef7fa 60%, #f6fcff 100%);
+}
+
+.card .icon {
+  width: 56px;
+  height: 56px;
+}
+
+section#contact form {
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul.list-unstyled li i.bi {
+  color: #fffbe6;
+  background: #216adb;
+  border-radius: 50%;
+  font-size: 1.3em;
+  vertical-align: middle;
+  margin-right: 0.5em;
+  padding: 0.1em 0.2em;
+}
+
+@media (max-width: 991.98px) {
+  section#contact form {
+    margin-top: 2rem;
+  }
+}
